Added back the EAP-PEAP option

--- a/apps/settings/elements/wifi_join_hidden.html
+++ b/apps/settings/elements/wifi_join_hidden.html
@@ -35,6 +35,7 @@
               <option value="SIM">EAP-SIM</option>
               <option value="AKA">EAP-AKA</option>
               <option value="AKA'">EAP-AKA'</option>
+              <option value="PEAP">EAP-PEAP</option>
             </select>
           </p>
         </li>
